20000412-11:01 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbdate.h
   * include/hbapi.h
   * source/rtl/datec.c
   * source/rtl/dates.c
   * source/rtl/dateshb.c
   * source/tools/dates2.c
   * source/vm/extend.c
   * contrib/rdd_ads/ads1.c
   * source/rdd/dbf1.c
     * Day/Month/Year parameters reordered to Year/Month/Day to match 
       international conventions.
       (hb_retd(), hb_dateDOW(), hb_dateEncode(), hb_dateDecode(),
        hb_dateStrPut(), hb_dateStrGet())

   ; Next items by Jose Lalin.

   * include/hbapirdd.h
     + added missing DBI_FULLPATH
     ! minor formating
     ! typos fixed, DBI_ definitions changed

   + tests/tstdbi.prg
   * tests/Makefile
     + new tests for DbInfo()
     + new tests for dbRecordInfo() and dbFieldInfo()

20000412-10:06 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/inkey.ch
   * source/rtl/inkey.c
   * source/rtl/gtdos/gtdos.c
   * source/rtl/gtos2/gtos2.c
   * source/rtl/gtwin/gtwin.c
   * tests/inkeytst.prg
     * INKEY_EXTENDED renamed to INKEY_RAW to better show its purpose.

   * source/rtl/console.c
     % hb_conOut() one variable removed.
     % DISPOUT(), DISPOUTAT() optimized for speed, they got larger though.
       hb_conOutDisp() removed.

   * source/rtl/dateshb.c
     * Some code put in blocks.

20000412-04:39 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/rtl/gtapi.c
     ! hb_gtGetColorStr() fixed.

20000412-03:14 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/tools/ctmisc.prg
     ! CT_SAVEGETS() fixed to empty GetList.

   * source/rtl/gtapi.c
     + hb_gtGetColorStr() readded the previous version of colorspec generation
       and put the CA-Clipper compatible one between STRICT guards.
       (Talking about the "W+*/GR" vs. "W+/GR*" issue.)

20000411-20:30 GMT -3 Luiz Rafael Culik <culik@sl.conex.net
   +doc/class_tp.txt
     *Doc template for classes
   *doc/en/misc.txt
     *Version() doc change to reflect the changes on the function
   *doc/en/rddord.txt